--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Allors"]
 	path = Allors
 	url = https://github.com/Allors/allors
+[submodule "Apps"]
+	path = Apps
+	url = https://github.com/Allors/apps
