--- a/Dipu/Website/packages.config
+++ b/Dipu/Website/packages.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="0.14.1" targetFramework="net46" />
+  <package id="Angular.UI.UI-Router" version="0.2.15" targetFramework="net46" />
+  <package id="AngularJS.Animate" version="1.4.7" targetFramework="net46" />
+  <package id="AngularJS.Core" version="1.4.7" targetFramework="net46" />
+  <package id="AngularJS.Sanitize" version="1.4.7" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="EPPlus" version="4.0.3" targetFramework="net451" />
   <package id="Humanizer" version="1.34.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="lodash" version="3.10.1" targetFramework="net46" />
+  <package id="lodash.TypeScript.DefinitelyTyped" version="0.9.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
